# domain-scanner

./: .dockerignore  .gitignore  .scan_state.json  CLAUDE.md  Cargo.toml  DISCLAIMER.md  Dockerfile  EXTENDING.md  LICENSE  README.md  config.json  old_zone_data.rs  run_log.txt
.github/workflows/: docker-publish.yml
data/: seed.sql
data/dictionaries/: gen_repeat.txt
seed/dictionaries/: gen_letters_3.txt  gen_letters_4.txt  gen_numbers.txt
src/: config.rs  generator.rs  lib.rs  logging.rs  main.rs  reserved.rs  state.rs  tui.rs  worker.rs
src/checker/: circuit_breaker.rs  doh.rs  local.rs  mod.rs  rdap.rs  registry.rs  traits.rs  whois.rs  zone_data.rs
src/publish/: mod.rs  templates.rs
src/web/: api.rs  db.rs  dictionary.rs  mod.rs  models.rs  queue.rs  recovery.rs  scan_runtime.rs  scan_runtime_support.rs
tests/: integration.rs  worker_pipeline.rs
web/: dictionaries.html  index.html  published.html  settings.html
