[package]
name = "domain-scanner"
version = "0.1.0"
edition = "2024"


[dependencies]
tokio = { version = "1.32", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.18"
anyhow = "1.0"
colored = "2.0"
async-trait = "0.1"
ratatui = "0.30.0"
crossterm = "0.29.0"