[package]
name = "domain-scanner"
version = "1.1.0"
edition = "2024"
authors = ["Veegn <veegn.me@gmail.com>"]
description = "A high-performance, asynchronous domain availability scanner with Web Dashboard and SQLite persistence."
license = "MIT"
readme = "README.md"
keywords = ["domain", "scanner", "whois", "dns", "axum"]
categories = ["command-line-utilities", "web-programming"]

[dependencies]
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"
once_cell = "1.18"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
time = { version = "0.3", features = ["formatting", "local-offset"] }
async-stream = "0.3"

# Web & DB
axum = "0.7"
tower-http = { version = "0.5", features = ["fs", "cors"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "chrono"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
